--- a/week2/index.html
+++ b/week2/index.html
@@ -7,5 +7,14 @@
   </head>
   <body>
     <h1>week 2</h1>
+    <a href="about.html">go to about page</a>
+    <a href="dummy/dummy.html">go to dummy page</a>
+    <br />
+    <input type="text" />
+    <input type="number" />
+    <button>click me</button>
+    <!-- this is my very first comment -->
+
+    <img src="IMG_1223.PNG" alt="this is a picture" />
   </body>
 </html>
