formatting of text added

--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -15,10 +15,10 @@
   </head>
   <body>
     <h1>Review of Getty's website on the Disney Concert Hall</h1>
-    <a href="https://gehry.getty.edu/" target="_blank">
+    <a href="https://gehry.getty.edu/" target="_blank" class="link">
       Visit Getty's Website</a
     >
-
+<div>
     <h2 class="question">
       What was the first thing you paid attention to when interacting with the
       experience?
@@ -43,35 +43,42 @@
         - Further scrolling down through the text segment of the ‘chapter’
       </li>
     </ul>
-    <h2>
+    <h2 class="question">
       What part of the experience did you spend the most time engaging with?
     </h2>
-    <p>
+    <p class="answer">
       It would be the small video sections where Frank Gehry was explaining the
       process behind certain sections of the building. I was somewhat
       discouraged to leave from the video section as there was a small text pop
       telling me if I were to scroll further I would exit the videos
     </p>
-    <h2>
+    <h2 class="question">
       What was the most common action in your two minute interaction with the
       experience?
     </h2>
-    <p>
+    <p class="answer">
       It would most likely be scrolling down as a lot of the site’s function was
       tied to that action, such as transitioning between each chapter or segment
       of the website, or from final product to sketch.
     </p>
-    <h2>
+  </div>
+  <div>
+    <h2 class="question right" >
       What is your impression of the intended primary goal of the interactive
       experience?
     </h2>
-    <p>
+
+    <p class="answer right">
       To provide a glimpse into the thought process and the effort Frank Gehry's
       teams took to design the concert hall, in a grand, refined yet welcoming
       manner.
     </p>
-    <h2>How does the interactive experience communicate this primary goal?</h2>
-    <p>
+
+    <h2 class="question right">
+      How does the interactive experience communicate this primary goal?
+    </h2>
+
+    <p class="answer right">
       The choice of classic music, smooth and sweeping transitions between the
       different chapters adds this feeling of refinement. The scenic footage
       showcasing the scale and different angles of the building communicates a
@@ -81,20 +88,24 @@
       place. Additionally, pictures of different sections of the concert hall
       sweeped over by the initial sketches hints to the viewer what Gehry will
       be talking about next.
-    </p>
-    <h2>
+    </h3>
+
+    <h2 class="question right">
       What is your impression of how the experience should be interacted with
       over time? (For how long and how many different times)
     </h2>
-    <p>
+
+    <p class="answer right">
       The experience is most likely intended to be interacted with only once for
       a short duration of time, at most 10 minutes.
     </p>
-    <h2>
+
+    <h2 class="question right">
       How does the interactive experience communicate how it should be
       interacted with over time?
     </h2>
-    <p>
+
+    <p class="answer right">
       The overall layout of the experience promotes a fast pace viewing. In the
       text section with the text placed in a zigzag manner, with pictures taking
       up a little over half the layout, more information would be hidden
@@ -102,11 +113,14 @@
       broken down into 4 small clips that can be skipped through, rather than a
       longer video with multiple sections.
     </p>
-    <h2>
+  </div>
+  
+  <div>
+    <h2 class="question">
       What other media forms (digital or otherwise) does the experience
       reference?
     </h2>
-    <p>
+    <p class="answer">
       The initial sketches and large blocks of color that make up the chapter
       divisions reminds me of architecture drawings on colour construction
       paper. The introduction section that involves b-roll of the concert hall
@@ -116,11 +130,11 @@
       the index is laid out similar to how art museums would archive artworks
       online.
     </p>
-    <h2>
+    <h2 class="question">
       What does this reference/s communicate to you about how you should act
       when engaging with your research experience?
     </h2>
-    <p>
+    <p class="answer">
       The text section gives me the impression to skim over it as I scroll
       through it,similar to how I would act when browsing through a paper
       magazine. The video section gives me the idea that I’m supposed to swipe
@@ -129,32 +143,35 @@
       slowly take in and appreciate the models and sketches provided like I’m at
       the museum.
     </p>
-    <h2>
+    <h2 class="question">
       What does this reference/s communicate to you about how you should feel
       when engaging with your research experience?
     </h2>
-    <p>
+    <p class="answer">
       The introduction scene and text sections did make me feel impressed. The
       video section did give me a sense of familiarity as I personally am more
       used to short form content, thus the design being explained seems less
       intimidating and easier to process. The index encourages the reader to
       take time to slowly examine the different models on display.
+    
     </p>
-    <h2>
+  </div>
+  <div>
+    <h2 class="question right">
       What is the most frustrating part of the interaction to you and what makes
       that part frustrating?
     </h2>
-    <p>
+    <p class="answer right">
       The video section, while informative, feels static compared to the rest of
       the website. Having to scroll past the videos and having to reconfirm that
       I’m leaving to the next page tampers and slows down the normally dynamic
       but fun experience.
     </p>
-    <h2>
+    <h2 class="question right">
       What is the most satisfying part of the interaction to you and what makes
       that part satisfying?
     </h2>
-    <p>
+    <p class="answer right">
       Surprisingly enough, it would be scrolling down in general. The action is
       overall satisfying for a variety of reasons. For example the subtle
       movements of the pictures as you scroll through the explanation section,
@@ -163,5 +180,6 @@
       down multiple times in different segments to experience the transformation
       again.
     </p>
+  </div>
   </body>
 </html>
