--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -15,11 +15,13 @@
   </head>
   <body>
     <h1>Review of Getty's website on the Disney Concert Hall</h1>
-    <a href="https://gehry.getty.edu/" target="_blank" class="link">
-      Visit Getty's Website</a
-    >
-<div>
-    <h2 class="question">
+    <div class="link">
+      <a href="https://gehry.getty.edu/" target="_blank" class="link">
+        Visit Getty's Website</a
+      >
+    </div>
+<div class="textformat">
+    <h2 class="question underlinegreen">
       What was the first thing you paid attention to when interacting with the
       experience?
     </h2>
@@ -28,7 +30,7 @@
       how it related to the lines being drawn in the background while the
       website loads.
     </p>
-    <h2 class="question">
+    <h2 class="question underlinegreen">
       Spend two minutes with the experience and create a list of each of your
       discrete actions.
     </h2>
@@ -43,7 +45,7 @@
         - Further scrolling down through the text segment of the ‘chapter’
       </li>
     </ul>
-    <h2 class="question">
+    <h2 class="question underlinegreen">
       What part of the experience did you spend the most time engaging with?
     </h2>
     <p class="answer">
@@ -52,7 +54,7 @@
       discouraged to leave from the video section as there was a small text pop
       telling me if I were to scroll further I would exit the videos
     </p>
-    <h2 class="question">
+    <h2 class="question underlinegreen">
       What was the most common action in your two minute interaction with the
       experience?
     </h2>
@@ -62,8 +64,8 @@
       of the website, or from final product to sketch.
     </p>
   </div>
-  <div>
-    <h2 class="question right" >
+  <div class="textformat">
+    <h2 class="question right underlineblue" >
       What is your impression of the intended primary goal of the interactive
       experience?
     </h2>
@@ -74,7 +76,7 @@
       manner.
     </p>
 
-    <h2 class="question right">
+    <h2 class="question right underlineblue">
       How does the interactive experience communicate this primary goal?
     </h2>
 
@@ -90,7 +92,7 @@
       be talking about next.
     </h3>
 
-    <h2 class="question right">
+    <h2 class="question right underlineblue">
       What is your impression of how the experience should be interacted with
       over time? (For how long and how many different times)
     </h2>
@@ -100,7 +102,7 @@
       a short duration of time, at most 10 minutes.
     </p>
 
-    <h2 class="question right">
+    <h2 class="question right underlineblue">
       How does the interactive experience communicate how it should be
       interacted with over time?
     </h2>
@@ -115,8 +117,8 @@
     </p>
   </div>
   
-  <div>
-    <h2 class="question">
+  <div class="textformat">
+    <h2 class="question underlineorange">
       What other media forms (digital or otherwise) does the experience
       reference?
     </h2>
@@ -130,7 +132,7 @@
       the index is laid out similar to how art museums would archive artworks
       online.
     </p>
-    <h2 class="question">
+    <h2 class="question underlineorange">
       What does this reference/s communicate to you about how you should act
       when engaging with your research experience?
     </h2>
@@ -143,7 +145,7 @@
       slowly take in and appreciate the models and sketches provided like I’m at
       the museum.
     </p>
-    <h2 class="question">
+    <h2 class="question underlineorange">
       What does this reference/s communicate to you about how you should feel
       when engaging with your research experience?
     </h2>
@@ -156,8 +158,8 @@
     
     </p>
   </div>
-  <div>
-    <h2 class="question right">
+  <div class="textformat">
+    <h2 class="question right underlinered">
       What is the most frustrating part of the interaction to you and what makes
       that part frustrating?
     </h2>
@@ -167,7 +169,7 @@
       I’m leaving to the next page tampers and slows down the normally dynamic
       but fun experience.
     </p>
-    <h2 class="question right">
+    <h2 class="question right underlinered">
       What is the most satisfying part of the interaction to you and what makes
       that part satisfying?
     </h2>
