--- a/assignment1/index.html
+++ b/assignment1/index.html
@@ -20,168 +20,170 @@
         Visit Getty's Website</a
       >
     </div>
-<div class="textformat">
-    <h2 class="question underlinegreen">
-      What was the first thing you paid attention to when interacting with the
-      experience?
-    </h2>
-    <p class="answer">
-      I first paid attention to classical music playing in the background and
-      how it related to the lines being drawn in the background while the
-      website loads.
-    </p>
-    <h2 class="question underlinegreen">
-      Spend two minutes with the experience and create a list of each of your
-      discrete actions.
-    </h2>
-    <ul class="answer">
-      <li>- Scrolling down towards the introduction of the concert hall</li>
-      <li>
-        - scrolling down further to advance the scenic footage of the concert
-        hall
-      </li>
-      <li>- clicking to transition to the video segment</li>
-      <li>
-        - Further scrolling down through the text segment of the ‘chapter’
-      </li>
-    </ul>
-    <h2 class="question underlinegreen">
-      What part of the experience did you spend the most time engaging with?
-    </h2>
-    <p class="answer">
-      It would be the small video sections where Frank Gehry was explaining the
-      process behind certain sections of the building. I was somewhat
-      discouraged to leave from the video section as there was a small text pop
-      telling me if I were to scroll further I would exit the videos
-    </p>
-    <h2 class="question underlinegreen">
-      What was the most common action in your two minute interaction with the
-      experience?
-    </h2>
-    <p class="answer">
-      It would most likely be scrolling down as a lot of the site’s function was
-      tied to that action, such as transitioning between each chapter or segment
-      of the website, or from final product to sketch.
-    </p>
-  </div>
-  <div class="textformat">
-    <h2 class="question right underlineblue" >
-      What is your impression of the intended primary goal of the interactive
-      experience?
-    </h2>
+    <div class="textformat">
+      <h2 class="question underlinegreen">
+        What was the first thing you paid attention to when interacting with the
+        experience?
+      </h2>
+      <p class="answer">
+        I first paid attention to classical music playing in the background and
+        how the lines being drawn in the background while the website loads.
+      </p>
+      <h2 class="question underlinegreen">
+        Spend two minutes with the experience and create a list of each of your
+        discrete actions.
+      </h2>
+      <ul class="answer">
+        <li>- Scrolling down towards the introduction of the concert hall</li>
+        <li>
+          - scrolling down further to advance the scenic footage of the concert
+          hall
+        </li>
+        <li>- clicking to transition to the video segment</li>
+        <li>
+          - Further scrolling down through the text segment of the ‘chapter’
+        </li>
+      </ul>
+      <h2 class="question underlinegreen">
+        What part of the experience did you spend the most time engaging with?
+      </h2>
+      <p class="answer">
+        It would be the small video sections where Frank Gehry was explaining
+        the process behind certain sections of the building. I felt somewhat
+        discouraged to leave from the video section as there was a small text
+        pop informing me if I were to scroll further I would exit the videos.
+      </p>
+      <h2 class="question underlinegreen">
+        What was the most common action in your two minute interaction with the
+        experience?
+      </h2>
+      <p class="answer">
+        It would most likely be scrolling down as a lot of the site’s function
+        was tied to that action, such as transitioning between each chapter or
+        segment of the website, or from final product to sketch.
+      </p>
+    </div>
+    <div class="textformat">
+      <h2 class="question right underlineblue">
+        What is your impression of the intended primary goal of the interactive
+        experience?
+      </h2>
 
-    <p class="answer right">
-      To provide a glimpse into the thought process and the effort Frank Gehry's
-      teams took to design the concert hall, in a grand, refined yet welcoming
-      manner.
-    </p>
+      <p class="answer right">
+        To provide a glimpse into the thought process and the effort Frank
+        Gehry's teams took to design the concert hall, in a grand, refined yet
+        welcoming manner.
+      </p>
 
-    <h2 class="question right underlineblue">
-      How does the interactive experience communicate this primary goal?
-    </h2>
+      <h2 class="question right underlineblue">
+        How does the interactive experience communicate this primary goal?
+      </h2>
 
-    <p class="answer right">
-      The choice of classic music, smooth and sweeping transitions between the
-      different chapters adds this feeling of refinement. The scenic footage
-      showcasing the scale and different angles of the building communicates a
-      sense of grandeur to the viewer. This is well contrasted against the
-      building sketches, large blocks of colour and thick typeface which gives a
-      glimpse into the workspace where the design process of this building took
-      place. Additionally, pictures of different sections of the concert hall
-      sweeped over by the initial sketches hints to the viewer what Gehry will
-      be talking about next.
-    </h3>
+      <p class="answer right">
+        The choice of classic music and smooth sweeping transitions between the
+        different chapters adds this feeling of refinement. Additionally The
+        scenic footage at the top of the webiste showcasing the scale and
+        different angles of the building communicates a sense of grandeur to the
+        viewer. This is well contrasted against the building sketches, large
+        blocks of colour and thick typeface which give more of a raw feeling, as
+        if the viewer is given a glimpse into the workspace where the design
+        process of this building took place. These two main themes are combined
+        in the header of each chapter, as pictures of different sections of the
+        concert hall sweeped over by the initial sketches. This also hints to
+        the viewer what Gehry will be talking about next in the video section.
+      </p>
 
-    <h2 class="question right underlineblue">
-      What is your impression of how the experience should be interacted with
-      over time? (For how long and how many different times)
-    </h2>
+      <h2 class="question right underlineblue">
+        What is your impression of how the experience should be interacted with
+        over time? (For how long and how many different times)
+      </h2>
 
-    <p class="answer right">
-      The experience is most likely intended to be interacted with only once for
-      a short duration of time, at most 10 minutes.
-    </p>
+      <p class="answer right">
+        The experience is most likely intended to be interacted with only once
+        for a short duration of time, at most 10 minutes.
+      </p>
 
-    <h2 class="question right underlineblue">
-      How does the interactive experience communicate how it should be
-      interacted with over time?
-    </h2>
+      <h2 class="question right underlineblue">
+        How does the interactive experience communicate how it should be
+        interacted with over time?
+      </h2>
 
-    <p class="answer right">
-      The overall layout of the experience promotes a fast pace viewing. In the
-      text section with the text placed in a zigzag manner, with pictures taking
-      up a little over half the layout, more information would be hidden
-      underneath a ‘read more’ button that links to another page. The videos are
-      broken down into 4 small clips that can be skipped through, rather than a
-      longer video with multiple sections.
-    </p>
-  </div>
-  
-  <div class="textformat">
-    <h2 class="question underlineorange">
-      What other media forms (digital or otherwise) does the experience
-      reference?
-    </h2>
-    <p class="answer">
-      The initial sketches and large blocks of color that make up the chapter
-      divisions reminds me of architecture drawings on colour construction
-      paper. The introduction section that involves b-roll of the concert hall
-      is shot similar to how a highly produced YouTube video. The text sections
-      are reminiscent of a paper magazine. The video section layout mimics the
-      short form content seen on social media. Towards the bottom of the website
-      the index is laid out similar to how art museums would archive artworks
-      online.
-    </p>
-    <h2 class="question underlineorange">
-      What does this reference/s communicate to you about how you should act
-      when engaging with your research experience?
-    </h2>
-    <p class="answer">
-      The text section gives me the impression to skim over it as I scroll
-      through it,similar to how I would act when browsing through a paper
-      magazine. The video section gives me the idea that I’m supposed to swipe
-      through it like I’m on YouTube shorts, however this is only done through
-      clicking anywhere to go to the next segment. At the index that I should
-      slowly take in and appreciate the models and sketches provided like I’m at
-      the museum.
-    </p>
-    <h2 class="question underlineorange">
-      What does this reference/s communicate to you about how you should feel
-      when engaging with your research experience?
-    </h2>
-    <p class="answer">
-      The introduction scene and text sections did make me feel impressed. The
-      video section did give me a sense of familiarity as I personally am more
-      used to short form content, thus the design being explained seems less
-      intimidating and easier to process. The index encourages the reader to
-      take time to slowly examine the different models on display.
-    
-    </p>
-  </div>
-  <div class="textformat">
-    <h2 class="question right underlinered">
-      What is the most frustrating part of the interaction to you and what makes
-      that part frustrating?
-    </h2>
-    <p class="answer right">
-      The video section, while informative, feels static compared to the rest of
-      the website. Having to scroll past the videos and having to reconfirm that
-      I’m leaving to the next page tampers and slows down the normally dynamic
-      but fun experience.
-    </p>
-    <h2 class="question right underlinered">
-      What is the most satisfying part of the interaction to you and what makes
-      that part satisfying?
-    </h2>
-    <p class="answer right">
-      Surprisingly enough, it would be scrolling down in general. The action is
-      overall satisfying for a variety of reasons. For example the subtle
-      movements of the pictures as you scroll through the explanation section,
-      and the sweeping transitions between the sketches or models to the fully
-      constructed concert hall in all of its glory, It made me scroll up and
-      down multiple times in different segments to experience the transformation
-      again.
-    </p>
-  </div>
+      <p class="answer right">
+        The overall layout of the experience promotes a fast pace viewing. In
+        the text section with the text placed in a zigzag-like manner, with
+        pictures taking up a little over half the layout, more information would
+        be hidden underneath a ‘read more’ button that links to another page.
+        The videos are broken down into 4 small clips that can be skipped
+        through, rather than a longer video with multiple sections.
+      </p>
+    </div>
+
+    <div class="textformat">
+      <h2 class="question underlineorange">
+        What other media forms (digital or otherwise) does the experience
+        reference?
+      </h2>
+      <p class="answer">
+        The initial sketches and large blocks of color that make up the chapter
+        divisions reminds me of architecture drawings on colour construction
+        paper. The introduction section that involves b-roll of the concert hall
+        is shot similar to a movie or documentary. The text sections are
+        reminiscent of a design magazine that puts more emphasis to wards the
+        picture, rather than the writing. The video section layout mimics the
+        short form content seen on social media. Towards the bottom of the
+        website the index is laid out similar to an art musuem's online archive.
+      </p>
+      <h2 class="question underlineorange">
+        What does this reference/s communicate to you about how you should act
+        when engaging with your research experience?
+      </h2>
+      <p class="answer">
+        The text section gives me the impression to skim over it as I scroll
+        through it,similar to how I would act when flipping through a paper
+        magazine. The video section gives me the idea that I’m supposed to swipe
+        down like I’m on YouTube shorts, however this can only done through
+        clicking right to go to the next clip. At the index that I felt like I
+        should slowly appreciate the models and sketches provided like I’m at a
+        museum.
+      </p>
+      <h2 class="question underlineorange">
+        What does this reference/s communicate to you about how you should feel
+        when engaging with your research experience?
+      </h2>
+      <p class="answer">
+        The introduction scene and text sections did impress me and added a
+        sense of ethos when interacting with the website, as if I could trust
+        what i was reading. The video section did give me a sense of familiarity
+        as I'm personally more used to short form content, thus the design
+        explaination seemed less intimidating and easier to process. The index
+        made me stop and take in the models and sketches from a more objective
+        point of view, as there's less narrative force driving this section when
+        compared to the others.
+      </p>
+    </div>
+    <div class="textformat">
+      <h2 class="question right underlinered">
+        What is the most frustrating part of the interaction to you and what
+        makes that part frustrating?
+      </h2>
+      <p class="answer right">
+        The video section, while informative, feels static compared to the rest
+        of the website. Having to scroll past the videos and having to reconfirm
+        that I’m leaving to the next page tampers and slows down the normally
+        dynamic but fun experience.
+      </p>
+      <h2 class="question right underlinered">
+        What is the most satisfying part of the interaction to you and what
+        makes that part satisfying?
+      </h2>
+      <p class="answer right">
+        It would be scrolling down in general. The action is overall satisfying
+        for a variety of reasons. For example, the subtle movements of the
+        pictures as you scroll through the explanation section, and the sweeping
+        transitions between the sketches or models to the fully constructed
+        concert hall in all of its glory, It made me scroll up and down multiple
+        times in different segments to experience the transformation again.
+      </p>
+    </div>
   </body>
 </html>
