week 8 and assignment 2

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -12,8 +12,7 @@
   <body>
     <!-- Header Section -->
     <header>
-      <h1>4 EASY ASIAN RECIPES FOR WHEN YOU'RE BUSY & STRESSED!
-      </h1>
+      <h1>4 EASY ASIAN RECIPES FOR WHEN YOU'RE BUSY & STRESSED!</h1>
     </header>
 
     <!-- Navigation Section -->
@@ -31,8 +30,12 @@
     <main class="container">
       <!-- Media Player Section -->
       <div class="media-player">
-        <iframe width="1280" height="720" id="custom-video-player">
-          <src="https://www.youtube.com/embed/v=Lt1oTt0S3Sw">
+        <iframe
+          width="1280"
+          height="720"
+          id="custom-video-player"
+          src="https://www.youtube.com/embed/Lt1oTt0S3Sw"
+        >
         </iframe>
         <div class="custom-controls">
           <button id="play-pause-btn" onclick="togglePlayPause()">
