--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -12,7 +12,7 @@
   <body>
     <!-- Header Section -->
     <header>
-      <h1>4 EASY ASIAN RECIPES FOR WHEN YOU'RE BUSY & STRESSED!</h1>
+      <h1>how to make pinwheels</h1>
     </header>
 
     <!-- Navigation Section -->
@@ -30,13 +30,11 @@
     <main class="container">
       <!-- Media Player Section -->
       <div class="media-player">
-        <iframe
-          width="1280"
-          height="720"
-          id="custom-video-player"
-          src="https://www.youtube.com/embed/Lt1oTt0S3Sw"
-        >
-        </iframe>
+        <video id="custom-video-player" controls>
+          <source
+            src="https://thelongesthumstore.sgp1.cdn.digitaloceanspaces.com/IM-2250/berry-bunch_handheld-windmill-fan.mp4"
+          />
+        </video>
         <div class="custom-controls">
           <button id="play-pause-btn" onclick="togglePlayPause()">
             <img
