--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -15,25 +15,16 @@
       <h1>how to make pinwheels</h1>
     </header>
 
-    <!-- Navigation Section -->
-    <nav>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Videos</a></li>
-        <li><a href="#">Music</a></li>
-        <li><a href="#">Playlists</a></li>
-        <!-- Add or remove navigation items as needed -->
-      </ul>
-    </nav>
-
     <!-- Main Content Section -->
     <main class="container">
       <!-- Media Player Section -->
       <div class="media-player">
-        <video id="custom-video-player" controls>
+        <video id="custom-video-player" controls width="500">
           <source
             src="https://thelongesthumstore.sgp1.cdn.digitaloceanspaces.com/IM-2250/berry-bunch_handheld-windmill-fan.mp4"
+            type="video/mp4"
           />
+          Your browser does not support the video tag.
         </video>
         <div class="custom-controls">
           <button id="play-pause-btn" onclick="togglePlayPause()">
@@ -54,9 +45,19 @@
 
       <!-- Additional Content Section -->
       <section>
-        <h2>Additional Content</h2>
-        <p>This is where you can showcase any other relevant content.</p>
-        <!-- Add more content as needed -->
+        <h2>Material list:</h2>
+        <ul>
+          <li>foam</li>
+          <li>scissors</li>
+          <li>glue dots</li>
+          <li>ruler</li>
+          <li>pen</li>
+          <li>paperstraw</li>
+        </ul>
+
+        <h2>Instruction timestamps</h2>
+
+        fold foam in half diagonally until making an X make a
       </section>
     </main>
 
