Buttons and Thumbnails added

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -36,28 +36,115 @@
               height="24"
             />
           </button>
-          <!-- add the missing buttons or functionality here -->
+          <button id="forward-5">
+            <img
+              src="https://img.icons8.com/?size=100&id=91631&format=png&color=000000"
+              alt="Skip 5 sections forward"
+              width="28"
+              height="28"
+            />
+          </button>
+          <button id="back-5">
+            <img
+              src="https://img.icons8.com/?size=100&id=91639&format=png&color=000000"
+              alt="Skip 5 seconds back"
+              width="28"
+              height="28"
+            />
+          </button>
+          <button id="fullscreen">
+            <img
+              src="https://img.icons8.com/?size=100&id=69155&format=png&color=000000"
+              alt="fullscreen"
+              width="28"
+              height="28"
+            />
+          </button>
+
           <div class="progress-bar">
             <span id="progress-bar-fill"></span>
           </div>
         </div>
       </div>
+      <!-- NOTE TO SELF: icon8 website allows you to recolour icons for free, revisit when colour palette is finalised.
+        I implemented the Forward and Back buttons because in my experience of following tutorials i would always be skipping back or forth 5 seconds to get clarification on certain steps.
+        I might include a fullscreen button or a double click function to allow for the user to follow the tutorial in better detail.-->
 
       <!-- Additional Content Section -->
-      <section>
-        <h2>Material list:</h2>
-        <ul>
-          <li>foam</li>
-          <li>scissors</li>
-          <li>glue dots</li>
-          <li>ruler</li>
-          <li>pen</li>
-          <li>paperstraw</li>
-        </ul>
+      <section class="Additional-info">
+        <section class="Material-list">
+          <h2>Material list:</h2>
+          <ul>
+            <li>foam</li>
+            <li>scissors</li>
+            <li>glue dots</li>
+            <li>ruler</li>
+            <li>pen</li>
+            <li>paperstraw</li>
+          </ul>
+        </section>
 
-        <h2>Instruction timestamps</h2>
+        <section class="timestamps">
+          <h2>Instruction timestamps</h2>
+          <button id="first-step-btn">
+            <img
+              id="first-step-img"
+              src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%201%20materials.png"
+              alt="FirstStep"
+            />
+          </button>
+          <h3>Material overview</h3>
 
-        fold foam in half diagonally until making an X make a
+          <button id="second-step-btn">
+            <img
+              id="second-step-img"
+              src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%202%20pinwheel%20net.png"
+              alt="SecondStep"
+            />
+          </button>
+          <h3>Step 1: Cutting out the Pinwheel</h3>
+
+          <button id="third-step-btn">
+            <img
+              id="third-step-img"
+              src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%203%20folding%20pinwheel.png"
+              alt="ThirdStep"
+            />
+          </button>
+          <h3>Step 2: Folding the PinWheel</h3>
+
+          <button id="fourth-step-btn">
+            <img
+              id="fourth-step-img"
+              src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%204%20foam%20circle.png"
+              alt="FourthStep"
+            />
+          </button>
+          <h3>Step 3: Cutting out the foam circle</h3>
+
+          <button id="fifth-step-btn">
+            <img
+              id="fifth-step-img"
+              src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%205%20assembling%20the%20pinwheel.png"
+              alt="FifthStep"
+            />
+          </button>
+          <h3>Step 4: Assembling the pinwheel</h3>
+
+          <button id="sixth-step-btn">
+            <img
+              id="sixth-step-img"
+              src="https://rmiteduau-my.sharepoint.com/personal/s3912871_student_rmit_edu_au/Documents/UX%20assignment%20two%20thumbnail%20timestamps/Step%206%20Tips%20and%20Tricks.png"
+              alt="sixthStep"
+            />
+          </button>
+          <h3>Tips and Tricks</h3>
+
+          <!-- This is the timestamp section.
+          I envisioned that the user will be able to click on the thumbnails to skip to the desired step. 
+          I took screenshots of the video and cropped them to the ratio of 19:6, I then uploaded them to my oneDrive and linked them to this website.
+          I'm somewhat worried there may be access issues with the onedrive and the user may not be able to actually view the thumbnail,I will have to ask friends to view this website on their laptops. -->
+        </section>
       </section>
     </main>
 
@@ -67,6 +154,12 @@
       <a href="https://icons8.com/icon/59862/play">Play</a> icon by
       <a href="https://icons8.com">Icons8</a>
       <a href="https://icons8.com/icon/61012/pause">Pause</a> icon by
+      <a href="https://icons8.com">Icons8</a>
+      <a href="https://icons8.com/icon/91631/forward-5">Forward 5</a> icon by
+      <a href="https://icons8.com">Icons8</a>
+      <a href="https://icons8.com/icon/91639/replay-5">Replay 5</a> icon by
+      <a href="https://icons8.com">Icons8</a>
+      <a href="https://icons8.com/icon/69155/full-screen">Fullscreen</a> icon by
       <a href="https://icons8.com">Icons8</a>
     </footer>
   </body>
