Updated layout (WIP)

--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -71,8 +71,8 @@
         I might include a fullscreen button or a double click function to allow for the user to follow the tutorial in better detail.-->
 
       <!-- Additional Content Section -->
-      <section class="Additional-info">
-        <section class="Material-list">
+      <section class="additional-info">
+        <section class="material-list">
           <h2>Material list:</h2>
           <ul>
             <li>foam</li>
