--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -37,7 +37,7 @@
           <button id="play-pause-btn" onclick="togglePlayPause()">
             <img
               id="play-pause-img"
-              src="https://img.icons8.com/ios-glyphs/30/play--v1.png"
+              src="https://img.icons8.com/?size=100&id=59862&format=png&color=05322f"
               alt="Play Button"
               width="24"
               height="24"
@@ -45,7 +45,7 @@
           </button>
           <button id="forward-5">
             <img
-              src="https://img.icons8.com/?size=100&id=91631&format=png&color=000000"
+              src="https://img.icons8.com/?size=100&id=91631&format=png&color=05322f"
               alt="Skip 5 sections forward"
               width="28"
               height="28"
@@ -53,7 +53,7 @@
           </button>
           <button id="back-5">
             <img
-              src="https://img.icons8.com/?size=100&id=91639&format=png&color=000000"
+              src="https://img.icons8.com/?size=100&id=91639&format=png&color=05322f"
               alt="Skip 5 seconds back"
               width="28"
               height="28"
@@ -61,7 +61,7 @@
           </button>
           <button id="fullscreen">
             <img
-              src="https://img.icons8.com/?size=100&id=69155&format=png&color=000000"
+              src="https://img.icons8.com/?size=100&id=69155&format=png&color=05322f"
               alt="fullscreen"
               width="28"
               height="28"
