--- a/assignment2/index.html
+++ b/assignment2/index.html
@@ -10,6 +10,12 @@
       href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@100..800&family=Yatra+One&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Salsa&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- add the font family of your choice -->
     <link rel="stylesheet" href="reset.css" />
